DRY up error handling and authorization
