# app/controllers/api/tokens_controller.rb
@@ -1,18 +1,8 @@
 class Api::TokensController < ApplicationController
+  before_action :authorize_with_jwt!, only: [:validate]
+
   def validate
-    auth_header = request.headers['Authorization']
-
-    token = auth_header.split(' ')[1]
-
-    TokenService.decode_token(token)
-
     render_success_response(message: 'Token is valid', data: {}, status: :ok)
-  rescue TokenService::VerificationError => e
-    render_error_response(message: 'Token signature verification failed', data: e.message, status: :unauthorized)
-  rescue TokenService::ExpiredTokenError => e
-    render_error_response(message: 'Access token has expired', data: e.message, status: :unauthorized)
-  rescue TokenService::DecodeError => e
-    render_error_response(message: 'Invalid token', data: e.message, status: :unauthorized)
   end
 
   def refresh
@@ -28,7 +18,7 @@ class Api::TokensController < ApplicationController
       return render_error_response(message: 'Refresh token has been revoked', data: nil, status: :unauthorized)
     end
 
-    if refresh_token_record.expires_at < Time.now
+    if refresh_token_record.expires_at < Time.current
       return render_error_response(message: 'Refresh token has expired. You must login again.', data: nil, status: :unauthorized)
     end
 
